<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/asosiyFon"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_60">

        <GridLayout
            android:id="@+id/grid_chiqim_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight="1"
                    android:text="@string/text_dokon_nomi"
                    android:textColor="@color/qizil"
                    android:textSize="@dimen/text_size25" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight="1"
                    android:text="@string/text_chiqim_nomi"
                    android:textColor="@color/qizil"
                    android:textSize="@dimen/text_size25" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spin_chiqim_add_dok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <AutoCompleteTextView
                    android:id="@+id/auto_chiqim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_chiqim"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@drawable/round_layout"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_5"
                    android:textColor="@color/qora"
                    android:textSize="@dimen/text_size30" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_chiqim_summa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:background="@drawable/round_layout"
                    android:hint="@string/text_summa"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:padding="@dimen/margin_5"
                    android:textColor="@color/qora"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_size30" />

            </LinearLayout>

        </GridLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/btn_chiqim_add_past"
        android:layout_width="@dimen/margin_60"
        android:layout_height="@dimen/margin_60"
        android:background="@drawable/rang"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_5"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_add_black_24dp"
        android:contentDescription="@string/text_qoshimcha_qoshish"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/imgChiqim_add_iks"
        android:layout_width="@dimen/margin_60"
        android:layout_height="@dimen/margin_60"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/margin_5"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add"
        android:visibility="visible"
        android:contentDescription="@string/text_oxirgiga_qo_shish" />

</RelativeLayout>