<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_yangi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/asosiyFon"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:gravity="center"
        android:text="@string/text_05_01_2018"
        android:textColor="@color/oq"
        android:textSize="@dimen/text_size25" />

    <CheckBox
        android:id="@+id/savdo_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/text_hammasi"
        android:textSize="@dimen/text_size25"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearL3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sana"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtDokon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_weight="1"
            android:text="@string/text_dokon_nomi"
            android:textColor="@color/qizil"
            android:textSize="@dimen/text_size25" />

        <TextView
            android:id="@+id/txt_shot_nomi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_weight="1"
            android:text="@string/text_shot_nomi"
            android:textColor="@color/qizil"
            android:textSize="@dimen/text_size25" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_5"
        android:layout_below="@id/linearL3"
        android:background="@color/qizil" />

    <ListView
        android:id="@+id/list_view_yangi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginBottom="@dimen/margin_60"
        android:divider="@color/kulrang"
        android:dividerHeight="@dimen/margin_5">

    </ListView>

    <ImageView
        android:id="@+id/btn_savdo_add_p_yang"
        android:layout_width="@dimen/margin_60"
        android:layout_height="@dimen/margin_60"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin_5"
        android:background="@drawable/rang"
        android:src="@drawable/ic_add_black_24dp" />

</RelativeLayout>