<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/asosiyFon">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_chiqim_upd_id_yangi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linearLayout7_chiqim_yangi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/margin_10"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_chiqim_yangi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5"
                        android:text="@string/text_updating"
                        android:textColor="@color/oq"
                        android:textSize="@dimen/text_size30"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_chiqim_upd_sana_yangi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/margin_10"
                        android:text="@string/text_05_01_2018"
                        android:textColor="@color/oq"
                        android:textSize="@dimen/text_size25" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_weight="1"
                        android:text="@string/text_dokon_nomi"
                        android:textColor="@color/qizil"
                        android:textSize="@dimen/text_size25" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_weight="1"
                        android:text="@string/text_chiqim_nomi"
                        android:textColor="@color/qizil"
                        android:textSize="@dimen/text_size25" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2_chiqim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/DokonNomi_chiqim_yangi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical" />

                    <AutoCompleteTextView
                        android:id="@+id/auto_chiqim_yangi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_5"
                        android:layout_weight="1"
                        android:background="@drawable/round_layout"
                        android:hint="@string/text_chiqim"
                        android:padding="@dimen/margin_5"
                        android:textColor="@color/qora"
                        android:textSize="@dimen/text_size30" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6_chiqim_yangi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout7_chiqim_yangi"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_15"
                    android:background="#464646" />

                <EditText
                    android:id="@+id/edt_chiqim_upd_summa_yangi"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/margin_15"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginRight="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_weight="1"
                    android:background="@drawable/round_layout"
                    android:gravity="right"
                    android:hint="@string/text_summa"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_10"
                    android:textColor="@color/qora"
                    android:textSize="@dimen/text_size30" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout6_chiqim_yangi"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_chiqim_upd_back_yangi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/rounbtnn"
                    android:text="@string/text_back"
                    android:textColor="@color/oq"
                    android:textSize="@dimen/text_size25" />

                <Button
                    android:id="@+id/btn_chiqim_upd_yangi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/rounbtnn"
                    android:text="@string/text_update"
                    android:textColor="@color/oq"
                    android:textSize="@dimen/text_size25" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
