<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/asosiyFon"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/txt_sav_upd_id_yangi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linearLayout7_yangi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_yangi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_updating"
                        android:textColor="@color/oq"
                        android:textSize="@dimen/text_size30"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_sav_upd_sana_yangi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5"
                        android:gravity="center"
                        android:text="@string/text_05_01_2018"
                        android:textColor="@color/oq"
                        android:textSize="@dimen/text_size25" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayou"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_Dokonn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_weight="1"
                        android:text="@string/text_dokon_nomi"
                        android:textColor="@color/qizil"
                        android:textSize="@dimen/text_size25" />

                    <TextView
                        android:id="@+id/txt_shot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_weight="1"
                        android:text="@string/text_shot_nomi"
                        android:textColor="@color/qizil"
                        android:textSize="@dimen/text_size25" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/DokonNomi_yangi"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_40"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/ShotNomi_yangi"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_40"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_weight="1" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6_yangi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout7_yangi"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_15"
                    android:background="@color/kulrang" />

                <EditText
                    android:id="@+id/edt_sav_upd_summa_yangi"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginRight="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_weight="1"
                    android:background="@drawable/round_layout"
                    android:gravity="right"
                    android:hint="@string/text_summa"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_5"
                    android:textColor="@color/qora"
                    android:textSize="@dimen/text_size30" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout6_yangi"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_sav_upd_back_yangi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/rounbtnn"
                    android:text="@string/text_back"
                    android:textColor="@color/oq"
                    android:textSize="@dimen/text_size25" />

                <Button
                    android:id="@+id/btn_sav_upd_yangi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/rounbtnn"
                    android:text="@string/text_update"
                    android:textColor="@color/oq"
                    android:textSize="@dimen/text_size25" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
